--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>
-Charles Goodman and Amrita Malur
-</title>
+  <head>
+    <title>
+    Charles Goodman and Amrita Malur
+    </title>
+    <meta charset-"utf-8"/>
+  </head>
+
 </html>
