--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
     Charles Goodman and Amrita Malur
     </title>
-    <meta charset-"utf-8"/>
+    <meta charset="utf-8"/>
   </head>
 
 </html>
