--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@ Charles Goodman and Amrita Malur
 </title>
 <meta charset="utf-8"/>
 </head>
-  
+<body>
+<p>Charles Goodman and Amrita Malur Tetris!
+</body>
 </html>
