implement write to screen function

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 Charles Goodman and Amrita Malur
 </title>
 <meta charset="utf-8"/>
+<link rel="stylesheet" href="style.css"/>
+<script type="text/javascript" src="tetris.js"></script>>
 </head>
-<body>
-<p>Charles Goodman and Amrita Malur Tetris!
+<body onload="init();">
+<p>Charles Goodman and Amrita Malur Tetris!</p>
+<pre id="game"></pre>
 </body>
 </html>
